added local storage

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <input type="text" id="title" required placeholder="Title" maxlength="50">
                 <p class="error" id="error">This book already exists!</p>
                 <input type="text" id="author" required placeholder="Author" maxlength="50">
-                <input type="number" id="pageCount" min="1" placeholder="Page count" max="2000">
+                <input type="number" id="pageCount" min="1" required placeholder="Page count" max="2000">
                 <div class="is-read">
                     <label for="isRead">Have you read this book?</label>
                     <input class="checkbox" type="checkbox" id="isRead">
